--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bewater",
+  "name": "bewater-builder",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,17 +10,17 @@
   },
   "packageManager": "^pnpm@8.6.5",
   "dependencies": {
-    "@clerk/nextjs": "^4.21.12",
+    "@clerk/nextjs": "^4.21.14",
     "@clerk/themes": "^1.7.5",
-    "@hookform/resolvers": "^3.0.1",
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
-    "@radix-ui/react-aspect-ratio": "^1.0.2",
-    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-hover-card": "^1.0.6",
-    "@radix-ui/react-icons": "^1.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
-    "@radix-ui/react-toast": "^1.1.3",
-    "@tanstack/react-query": "^4.28.0",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@tanstack/react-query": "^4.29.19",
     "accept-language": "^3.0.18",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
@@ -31,32 +31,32 @@
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
     "markdown-to-jsx": "^7.2.1",
-    "next": "13.4.6",
+    "next": "13.4.10",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-fast-marquee": "^1.5.2",
-    "react-hook-form": "^7.43.9",
+    "react-fast-marquee": "^1.6.0",
+    "react-hook-form": "^7.45.1",
     "react-i18next": "13.0.1",
     "react-select": "^5.7.0",
     "react-wrap-balancer": "^1.0.0",
     "remeda": "^1.9.0",
     "zod": "^3.21.4",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/fslightbox-react": "^1.4.2",
-    "@types/node": "18.15.2",
+    "@types/node": "20.4.1",
     "@types/numeral": "^2.0.2",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.3.4",
-    "postcss": "^8.4.21",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "13.4.10",
+    "postcss": "^8.4.25",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^5.1.3"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   }
 }
