--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bewater-host-website",
+  "name": "bewater-host",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,26 +25,26 @@
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
+    "@types/react": "^18.2.14",
     "@types/react-datepicker": "^4.11.2",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
+    "@types/react-dom": "^18.2.6",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
-    "eslint": "8.44.0",
+    "eslint": "^8.44.0",
     "eslint-config-next": "13.4.10",
     "markdown-to-jsx": "^7.2.1",
     "next": "13.4.10",
-    "postcss": "8.4.25",
+    "postcss": "^8.4.25",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.1",
     "react-wrap-balancer": "^1.0.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   }
