--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-toast": "^1.1.4",
+    "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.0",
     "accept-language": "^3.0.18",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
-    "fslightbox-react": "^1.7.6",
     "i18next": "23.2.6",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
@@ -34,6 +35,7 @@
     "next": "13.4.10",
     "numeral": "^2.0.6",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.2",
@@ -41,22 +43,15 @@
     "react-select": "^5.7.4",
     "react-wrap-balancer": "^1.0.0",
     "remeda": "^1.24.0",
+    "yet-another-react-lightbox": "^3.12.0",
     "zod": "^3.21.4",
-    "zustand": "^4.3.9",
-    "react-datepicker": "^4.16.0",
-
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@t3-oss/env-nextjs": "^0.6.0"
-   
- 
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.15.0",
-
-    "@types/fslightbox-react": "^1.7.3",
     "@types/node": "20.4.1",
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.2.17",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
