--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "packageManager": "^pnpm@8.6.5",
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
+    "@clerk/nextjs": "^4.23.5",
     "@clerk/themes": "^1.7.5",
-    "@hookform/resolvers": "^3.2.0",
+    "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -21,8 +21,8 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-toast": "^1.1.4",
-    "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-query": "^4.32.6",
+    "@t3-oss/env-nextjs": "^0.6.1",
+    "@tanstack/react-query": "^4.35.3",
     "accept-language": "^3.0.18",
     "axios": "^1.5.0",
     "clsx": "^1.2.1",
@@ -32,35 +32,35 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "markdown-to-jsx": "^7.3.2",
-    "next": "13.4.19",
+    "next": "^13.5.1",
     "numeral": "^2.0.6",
     "react": "18.2.0",
-    "react-datepicker": "^4.16.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.46.1",
     "react-i18next": "13.0.1",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4",
-    "react-wrap-balancer": "^1.0.0",
-    "remeda": "^1.24.0",
-    "yet-another-react-lightbox": "^3.12.0",
+    "react-wrap-balancer": "^1.1.0",
+    "remeda": "^1.27.0",
+    "yet-another-react-lightbox": "^3.12.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "20.4.1",
     "@types/numeral": "^2.0.2",
-    "@types/react": "^18.2.20",
+    "@types/react": "^18.2.22",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "13.4.10",
-    "postcss": "^8.4.27",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.5.1",
+    "postcss": "^8.4.30",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
