--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next": "23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
+    "js-file-downloader": "^1.1.25",
     "markdown-to-jsx": "^7.3.2",
     "next": "^13.5.3",
     "numeral": "^2.0.6",
@@ -46,6 +47,7 @@
     "react-select": "^5.7.5",
     "react-wrap-balancer": "^1.1.0",
     "remeda": "^1.27.0",
+    "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.12.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
