--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.6",
     "@clerk/themes": "^1.7.6",
-    "@hookform/resolvers": "^3.3.1",
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,6 +25,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.35.7",
+    "@vercel/og": "^0.5.20",
     "accept-language": "^3.0.18",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
