--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.35.7",
+    "@vercel/og": "^0.5.20",
     "accept-language": "^3.0.18",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
