--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "compressorjs": "^1.2.1",
     "currency-symbol-map": "^5.1.0",
     "date-fns": "^2.30.0",
+    "echarts": "^5.4.3",
     "i18next": "23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
