--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "i18next": "23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
+    "js-cookie": "^3.0.5",
     "js-file-downloader": "^1.1.25",
     "markdown-to-jsx": "^7.3.2",
     "next": "^14.0.4",
     "numeral": "^2.0.6",
+    "randomstring": "^1.3.0",
     "react": "18.2.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "18.2.0",
@@ -56,8 +58,10 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.4.1",
     "@types/numeral": "^2.0.5",
+    "@types/randomstring": "^1.1.11",
     "@types/react": "^18.2.43",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.2.17",
