--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "react-hook-form": "^7.49.0",
     "react-i18next": "13.5.0",
     "react-select": "^5.8.0",
+    "react-sortablejs": "^6.1.4",
     "react-wrap-balancer": "^1.1.0",
     "remeda": "^1.29.0",
+    "sortablejs": "^1.15.1",
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.15.6",
     "zod": "^3.22.4",
@@ -66,6 +68,7 @@
     "@types/react": "^18.2.45",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.2.18",
+    "@types/sortablejs": "^1.15.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
