--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "i18next-resources-to-backend": "^1.2.0",
     "js-cookie": "^3.0.5",
     "js-file-downloader": "^1.1.25",
+    "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.3.2",
     "next": "^14.0.4",
     "numeral": "^2.0.6",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.4.10",
     "@types/numeral": "^2.0.5",
     "@types/randomstring": "^1.1.11",
