--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000
-# NEXT_PUBLIC_API_ENDPOINT=http://services.dev.bewater.xyz
-NEXT_PUBLIC_API_ENDPOINT=https://services.bewater.xyz
+NEXT_PUBLIC_API_ENDPOINT=http://services.dev.bewater.xyz
+# NEXT_PUBLIC_API_ENDPOINT=https://services.bewater.xyz
 NEXT_PUBLIC_HOME_URL=https://build.bewater.xyz
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
