--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-wrap-balancer": "^1.1.1",
     "remeda": "^1.61.0",
     "sortablejs": "^1.15.2",
+    "tailwind-merge": "^2.5.3",
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.20.1",
     "zod": "^3.23.8",
