--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "currency-symbol-map": "^5.1.0",
     "date-fns": "^2.30.0",
     "echarts": "^5.5.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-resources-to-backend": "^1.2.1",
