--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^5.5.2",
     "@clerk/themes": "^1.7.17",
     "@hookform/resolvers": "^3.6.0",
+    "@hugocxl/react-to-image": "^0.0.9",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -32,9 +33,13 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
+    "csv-parse": "^5.6.0",
     "currency-symbol-map": "^5.1.0",
     "date-fns": "^2.30.0",
+    "dom-to-image-more": "^3.5.0",
+    "dotenv": "^16.4.5",
     "echarts": "^5.5.1",
+    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.1",
@@ -61,9 +66,7 @@
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.20.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.4",
-    "csv-parse": "^5.6.0",
-    "dotenv": "^16.4.5"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
