--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
     "echarts": "^5.5.1",
+    "html-to-image": "^1.11.11",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-resources-to-backend": "^1.2.1",
