--- a/scripts/github-data-sync/package.json
+++ b/scripts/github-data-sync/package.json
@@ -10,7 +10,8 @@
     "sync": "npm run build && npm start bewater_syncer_resources.csv",
     "generate-tags": "npm run build && node dist/generate_ranking_tags.js",
     "dev": "ts-node-dev --respawn src/index.ts",
-    "sync-new": "npm run build && node dist/sync_new_projects"
+    "sync-new": "npm run build && node dist/sync_new_projects",
+    "check-forks": "node check-forks.js"
   },
   "keywords": [],
   "author": "",
