--- a/scripts/github-data-sync/package.json
+++ b/scripts/github-data-sync/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "sync": "npm run build && npm start bewater_syncer_resources.csv",
+    "start": "ts-node-esm src/index.ts",
+    "sync": "npm run build && node dist/index.js source/bewater_syncer_resources1.csv",
     "generate-tags": "npm run build && node dist/generate_ranking_tags.js",
     "dev": "ts-node-dev --respawn src/index.ts",
     "sync-new": "npm run build && node dist/sync_new_projects",
