--- a/scripts/github-data-sync/tsconfig.json
+++ b/scripts/github-data-sync/tsconfig.json
@@ -4,12 +4,12 @@
     "module": "ES2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 } 
