--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "js-cookie": "^3.0.5",
     "js-file-downloader": "^1.1.25",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.482.0",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.4",
     "numeral": "^2.0.6",
@@ -55,6 +56,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.52.0",
     "react-i18next": "^14.1.2",
+    "react-markdown": "^10.1.0",
     "react-select": "^5.8.0",
     "react-sortablejs": "^6.1.4",
     "react-wrap-balancer": "^1.1.1",
