--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "csv-parse": "^5.6.0",
     "currency-symbol-map": "^5.1.0",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.2.4",
     "dotenv": "^16.4.5",
     "echarts": "^5.5.1",
     "html-to-image": "^1.11.11",
