--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^1.7.17",
     "@hookform/resolvers": "^3.6.0",
     "@hugocxl/react-to-image": "^0.0.9",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -50,6 +51,7 @@
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.4",
     "numeral": "^2.0.6",
+    "prisma": "^6.8.2",
     "randomstring": "^1.3.0",
     "react": "^18.3.1",
     "react-datepicker": "^4.25.0",
