--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.20.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
