--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -58,6 +59,7 @@
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.4",
     "numeral": "^2.0.6",
+    "pino-pretty": "^10.3.1",
     "prisma": "^6.8.2",
     "randomstring": "^1.3.0",
     "react": "^18.3.1",
@@ -79,8 +81,7 @@
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.20.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.4",
-    "pino-pretty": "^10.3.1"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
